--- a/config.org
+++ b/config.org
@@ -100,12 +100,6 @@ Test some package & modes
 (scroll-bar-mode -1)
 (menu-bar-mode -1)
 
-(set-terminal-coding-system 'utf-8)
-(set-keyboard-coding-system 'utf-8)
-(set-language-environment "UTF-8")
-(prefer-coding-system 'utf-8)
-(delete-selection-mode 1)
-(set-default-coding-systems 'utf-8)
 #+end_src
 *** bidi
 #+begin_src emacs-lisp
@@ -129,7 +123,8 @@ Test some package & modes
 #+end_src
 *** frame sizing
 #+begin_src emacs-lisp
-(toggle-frame-maximized)
+;; (toggle-frame-maximized)
+(set-frame-parameter nil 'fullscreen 'maximized)
 (cond
  (IS-WINDOWS ())
  (IS-LINUX (toggle-frame-fullscreen)))
@@ -574,8 +569,13 @@ delete directory name in one go
 *** visual settings
 **** font
 #+begin_src emacs-lisp
-(set-face-attribute 'default nil :font "Source Code Pro:pixelsize=20")
+;; (set-face-attribute 'default nil :font "Source Code Pro:pixelsize=20")
 
+(use-package cnfonts)
+(cnfonts-mode 1)
+;; 添加两个字号增大缩小的快捷键
+(define-key cnfonts-mode-map (kbd "C-x C--") #'cnfonts-decrease-fontsize)
+(define-key cnfonts-mode-map (kbd "C-x C-=") #'cnfonts-increase-fontsize)
 #+end_src
 **** theme
 loading theme is remarkably slow
